<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">智历</string>
    <string name="action_settings">Settings</string>
    
    <!-- loginActivity -->
    <string name="loginactivity_activityname">登录</string>
    <string name="loginactivity_username">用户名</string>
    <string name="loginactivity_password">密码</string>
    <string name="loginactivity_code">公司编码</string>
    <string name="loginactivity_confirm">确认</string>
    <string name="loginactivity_tips"></string>
    <string name="loginactivity_copyRight">CopyRight 天津市智历宝软件科技有限公司</string>
    
    <!-- mainConsoleActivity -->
    <string name="mainconsoleactivity_activityname">主面板</string>
    <string name="mainconsoleactivity_signin">签到系统</string>
    <string name="mainconsoleactivity_createorder">报单</string>
    <string name="mainconsoleactivity_vieworder">查看已报单</string>
    <string name="mainconsoleactivity_ordersystem">报单系统</string>
    
    <!-- ViewOrderActivity -->
    <string name="vieworderactivity_activityname">查看订单</string>
    
    <!-- OrderDetailActivity -->
    <string name="orderdetailactivity_activityname">订单详情</string>
    
    <!-- CreateOrderActivity -->
    <string name="createoderactivity_activityname">报单</string>
    
    <!-- SigninActivity -->
    <string name="signinactivity_activityname">上班签到</string>
    <string name="signinactivity_address">当前地址 :</string>
    <string name="signinactivity_photobutton">点击拍照</string>
    <string name="signinactivity_comment">请填写摘要</string>
    <string name="signinactivity_commit">提交</string>
    
	<!-- OrderSystemActivity -->
	<string name="ordersystemactivity_activityname">上班签到</string>
	<string name="ordersystemactivity_home">主页</string>
	<string name="ordersystemactivity_zoomin">放大</string>
	<string name="ordersystemactivity_zoomout">缩小</string>
	<string name="ordersystemactivity_exit">退出</string>

	
</resources>
